Add ImGui headers in solution Add possiblity to create platform window for drag window Improve DockAction Rename function SetPos to SetPosition Rename function UnDock to InternalUnDock

--- a/ImWindow/ImWindow.vcxproj
+++ b/ImWindow/ImWindow.vcxproj
@@ -159,6 +159,12 @@
     <ClCompile Include="ImwWindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Externals\ImGui\imgui\imconfig.h" />
+    <ClInclude Include="..\Externals\ImGui\imgui\imgui.h" />
+    <ClInclude Include="..\Externals\ImGui\imgui\imgui_internal.h" />
+    <ClInclude Include="..\Externals\ImGui\imgui\stb_rect_pack.h" />
+    <ClInclude Include="..\Externals\ImGui\imgui\stb_textedit.h" />
+    <ClInclude Include="..\Externals\ImGui\imgui\stb_truetype.h" />
     <ClInclude Include="ImwConfig.h" />
     <ClInclude Include="ImwContainer.h" />
     <ClInclude Include="ImwEnums.h" />
