Add Win32MessageHelper for show current message of an Win32 event

--- a/ImWindowDX11/ImWindowDX11.vcxproj
+++ b/ImWindowDX11/ImWindowDX11.vcxproj
@@ -176,11 +176,13 @@
     <ClCompile Include="ImwWindowManagerDX11.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NodeWindow.cpp" />
+    <ClCompile Include="Win32MessageHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImwPlatformWindowDX11.h" />
     <ClInclude Include="ImwWindowManagerDX11.h" />
     <ClInclude Include="NodeWindow.h" />
+    <ClInclude Include="Win32MessageHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
