--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Externals/imgui"]
 	path = Externals/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "Externals/EasyWindow"]
+	path = Externals/EasyWindow
+	url = https://github.com/thennequin/EasyWindow.git
