--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ environment:
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     TOOLSET: vs2012
-    BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
+    BACKEND: --with-sff --with-opengl --with-glfw --with-dx11
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     TOOLSET: vs2012
     BACKEND: --with-bgfx
