--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,13 +10,13 @@ environment:
     BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     TOOLSET: vs2015
-    BACKEND: --with-bgfx
+    BACKEND: --with-sff --with-bgfx
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     TOOLSET: vs2017
     BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     TOOLSET: vs2017
-    BACKEND: --with-bgfx
+    BACKEND: --with-sff --with-bgfx
 
 configuration:
   - Debug
