--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,7 +57,7 @@ build:
   project: .projects/$(TOOLSET)/ImWindow.sln
   
 after_build:
-  - 7z a ImWindow.zip "%APPVEYOR_BUILD_FOLDER%\ImWindow.h" "%APPVEYOR_BUILD_FOLDER%\ImWindow.cpp" "%APPVEYOR_BUILD_FOLDER%\ImWindow\ImwConfig.h"
+  - 7z a ImWindow.zip "%APPVEYOR_BUILD_FOLDER%\ImWindow.h" "%APPVEYOR_BUILD_FOLDER%\ImWindow.cpp" "%APPVEYOR_BUILD_FOLDER%\ImwConfig.h"
 
 artifacts:
   - path: Output\*.exe
