--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,7 +57,7 @@ build:
   project: .projects/$(TOOLSET)/ImWindow.sln
   
 after_build:
-  - 7z a ImWindow.zip "%APPVEYOR_BUILD_FOLDER%\ImWindow.h" "%APPVEYOR_BUILD_FOLDER%\ImWindow.cpp" "%APPVEYOR_BUILD_FOLDER%\ImwConfig.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthmConfig.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthm.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthm.cpp"
+  - 7z a "%APPVEYOR_BUILD_FOLDER%\ImWindow.zip" "%APPVEYOR_BUILD_FOLDER%\ImWindow.h" "%APPVEYOR_BUILD_FOLDER%\ImWindow.cpp" "%APPVEYOR_BUILD_FOLDER%\ImwConfig.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthmConfig.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthm.h" "%APPVEYOR_BUILD_FOLDER%\Externals\UtilsCollection\JsonStthm\JsonStthm.cpp"
 
 artifacts:
   - path: Output\*.exe
