--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,9 +3,6 @@ version: 0.3.{build}
 environment:
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    TOOLSET: vs2012
-    BACKEND: --with-sff --with-opengl --with-glfw --with-dx11
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     TOOLSET: vs2015
     BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -16,6 +13,12 @@ environment:
     BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     TOOLSET: vs2017
+    BACKEND: --with-sff --with-bgfx
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+    TOOLSET: vs2022
+    BACKEND: --with-sff --with-opengl --with-glfw --with-dx11 --with-sokol
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+    TOOLSET: vs2022
     BACKEND: --with-sff --with-bgfx
 
 configuration:
